pkl-core/src/test/files/LanguageSnippetTests/input/errors/intrinsifiedTypeAlias3.pkl
res1: NonNull = null